# src/routes/auth.route.ts
@@ -1,6 +1,7 @@
 import { Hono } from "hono";
 import * as authController from "../controllers/auth.controller.ts";
 import { requireAuth } from "../middleware/auth.middleware.ts";
+import { apiKeyMiddleware } from "../middleware/apiKey.middleware.ts";
 
 const authRoutes = new Hono();
 
@@ -12,6 +13,11 @@ authRoutes.post("/validate", requireAuth, ...authController.validate);
 authRoutes.delete("/delete", requireAuth, ...authController.delete_user);
 authRoutes.patch("/update", requireAuth, ...authController.update_user);
 authRoutes.get("/user", requireAuth, ...authController.get_user_data);
+authRoutes.get(
+  "/user/:userId",
+  apiKeyMiddleware,
+  ...authController.get_user_by_id
+);
 authRoutes.get(
   "/user/preferences",
   requireAuth,
